# labs_os

./: README.md  git.cmd  git.sh
Lab1/: .gitignore  CMakeLists.txt  git.sh  git_run.cmd  myprog.c
Lab2/: CMakeLists.txt  git.sh  git_run.cmd  test.c++
Lab3/: CMakeLists.txt  git_run.cmd  mem_shr.c++  mem_shr.hpp  output.txt  prog.c++  sem_mng.c++  sem_mng.hpp  thr.c++  thr.hpp  time_log.c++  time_log.hpp
Lab4/: CMakeLists.txt  emulator.cpp  logger.cpp  serial.cpp  serial.h  utils.cpp  utils.h
Lab5/: CMakeLists.txt  README.md  build.bat  serial.cpp  server.cpp
Lab5/web/: index.html
Lab6/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  chartwidget.cpp  chartwidget.h  chartwidget_qtcharts.cpp  chartwidget_qtcharts.h  httpclient.cpp  httpclient.h  main.cpp
